--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
 		"knex": "^0.15.2",
 		"mysql": "^2.16.0",
 		"pm2": "^3.1.3",
-		"sqlite3": "^4.0.2"
+		"sqlite3": "^4.0.2",
+		"redis": "^3.0.2"
 	},
 	"description": "DHT Torrent Scraper",
 	"devDependencies": {
